--- a/index.html
+++ b/index.html
@@ -12,30 +12,31 @@
 </head>
 <body>
 
-<section class="mt-5">
+<section class="mt-3">
         <div class="container">
+            <p class="info-message alert alert-danger w-75 mx-auto text-center text-nowrap">Pleasef enter value</p>
             <h2 class="text-center fs-1">Todos</h2>
             <form class="todo-form" action="#" method="post">
                 <div class="d-flex flex-column flex-md-row w-75 mx-auto mb-3">
-                    <input class="task-input form-control mb-3 mb-md-0 me-md-3" type="text" minlength="3" maxlength="1024" placeholder="Enter your a task..." required>
+                    <input class="task-input form-control mb-3 mb-md-0 me-md-3" type="text" placeholder="Enter your a task...">
                     <button class="todo-btn btn btn-success text-white fw-bold px-4">Add</button>
                 </div>
             </form>
             <ul class="count-collection row  d-flex list-unstyled w-75 mx-auto">
-                <li class="count-item col-12 col-lg-4 mb-2 mb-lg-0">
-                    <div class="d-flex  justify-content-center py-3 bg-primary text-center">
+                <li class="count-item col-12 col-lg-4 mb-2 bg-primary mb-lg-0">
+                    <div class="d-flex  justify-content-center py-3  text-center">
                         <p class="fw-bold fs-4 mb-0 me-2 text-secondary">All:</p>
                         <span class="all fw-bold fs-4 text-white">0</span>
                     </div>
                 </li>
                 <li class="count-item col-12 col-lg-4 mb-2 mb-lg-0">
-                    <div class="d-flex  justify-content-center py-3 bg-primary text-center">
+                    <div class="d-flex justify-content-center py-3 bg-primary text-center">
                         <p class="fw-bold fs-4 mb-0 me-2 text-secondary">Completed:</p>
                         <span class="completed fw-bold fs-4 text-white">0</span>
                     </div>
                 </li>
-                <li class="count-item col-12 col-lg-4">
-                    <div class="d-flex  justify-content-center py-3 bg-primary text-center">
+                <li class="count-item col-12 col-lg-4 bg-primary">
+                    <div class="d-flex  justify-content-center py-3 text-center">
                         <p class="fw-bold fs-4 mb-0 me-2 text-secondary">Uncompleted:</p>
                         <span class="uncompleted fw-bold fs-4 text-white">0</span>
                     </div>
